--- a/hkv.cabal
+++ b/hkv.cabal
@@ -16,9 +16,14 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 executable hkv
-  -- main-is:
+  main-is: Server.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.6 && <4.7
+  build-depends:       base >=4.6
+                       , attoparsec>=0.11
+                       , network
+                       , bytestring
+                       , stm
+                       , containers
   hs-source-dirs:      src
   default-language:    Haskell2010
