--- a/hkv.cabal
+++ b/hkv.cabal
@@ -25,5 +25,6 @@ executable hkv
                        , bytestring
                        , stm
                        , containers
+                       , cereal
   hs-source-dirs:      src
   default-language:    Haskell2010
